--- a/oldhtml/main.html
+++ b/oldhtml/main.html
@@ -15,7 +15,7 @@
         <p>Health+ is a Wellbeing WebApp, specifically targeted towards FDM consultants and internal staff. <br>
         Health+ will provide fitness, mental health and general wellbeing support through features like: trackers, various resources on these topics, <br>
         forums and a chat(??) platform, where FDM Employees will be able to contact one of the 30 Mental Health Ambassadors.</p>
-        <div><button>Click here to login!</button></div>
+        <div><button><a href="login.html">Click here to login!</a></button></div>
     </div>
     <footer>
         <nav>
