--- a/oldhtml/main.html
+++ b/oldhtml/main.html
@@ -23,7 +23,7 @@
                 <li><a hfref="privacy.html">Privacy</a></li>
                 <li><a href="tandc.html">Terms and Conditions</a></li>
                 <li><a href="faqs.html">FAQs</a></li>
-                <li><a href="contact.html>Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </footer>
