--- a/oldhtml/login.html
+++ b/oldhtml/login.html
@@ -25,16 +25,18 @@
                 one uppercase and lower case letter and at least one number."/>
                 <nav><p>Forgot password?</p></nav>
             </p>
-            <input type="submit" value="Login"/>
+            <a href="home.html"><input type="submit" value="Login"/></a>
           </section>
         </fieldset>
     </form>
+    <footer>
         <nav>
             <ul>
-                <li>Privacy</li>
-                <li>Terms and Conditions</li>
-                <li>FAQs</li>
-                <li>Contact</li>
+                <li><a hfref="privacy.html">Privacy</a></li>
+                <li><a href="tandc.html">Terms and Conditions</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </footer>
+</body>
