--- a/oldhtml/home.html
+++ b/oldhtml/home.html
@@ -10,4 +10,14 @@
 </head>
 <body>
   <p>Welcome to homepage!</p>
+  <footer>
+       <nav>
+           <ul>
+               <li><a hfref="privacy.html">Privacy</a></li>
+               <li><a href="tandc.html">Terms and Conditions</a></li>
+               <li><a href="faqs.html">FAQs</a></li>
+               <li><a href="contact.html">Contact</a></li>
+           </ul>
+        </nav>
+   </footer>
 </body>
