--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Health+</title>
-    <link rel="stylesheet" href="../reset.css" type="text/css" />
-    <link rel="stylesheet" href="../header.css" type="text/css" />
-    <link rel="stylesheet" href="../footer.css" type="text/css" />
+    <link rel="stylesheet" href="Components/reset.css" type="text/css" />
+    <link rel="stylesheet" href="Components/header.css" type="text/css" />
+    <link rel="stylesheet" href="Components/footer.css" type="text/css" />
     <link rel="stylesheet" href="welcome.css" type="text/css" />
 
 </head>
 <body>
     <header>
         <div class="wrapper">
-                <img src="../../../assets/FDMlogo.png" alt="FDM logo" height="30">
+                <img src="assets/FDMlogo.png" alt="FDM logo" height="30">
             <div class="header-text">
                 <h1>Health+</h1>
             </div>
@@ -33,10 +33,10 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="../footer/privacy/priv.html">Privacy</a></li>
-                <li><a href="../footer/tc/tandc.html">Terms and Conditions</a></li>
-                <li><a href="../footer/faq/faqs.html">FAQs</a></li>
-                <li><a href="../footer/contact/contact.html">Contact the Team</a></li>
+                <li><a href="Components/footer/privacy/priv.html">Privacy</a></li>
+                <li><a href="Components/footer/tc/tandc.html">Terms and Conditions</a></li>
+                <li><a href="Components/footer/faq/faqs.html">FAQs</a></li>
+                <li><a href="Components/footer/contact/contact.html">Contact the Team</a></li>
             </ul>
         </nav>
     </footer>
